--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="" id="app"><!--app-html--></div>
+  <div id="app"><!--app-html--></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
